--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 
 <body>
 
-	
+	<header style="text-align: center; font-size: 3vw;">
+		<h1> <!-- Importante colocar esse "h1" pro SEO -->
+			<b>Biblioteca da Aprovação</b>
+			<!-- <b>BIBLIOTECA DA APROVAÇÃO</b> -->
+		</h1>
+	</header>
 
 	<div class="container">
 		<h2>Biblioteca da Aprovação</h2>
