--- a/index.html
+++ b/index.html
@@ -27,12 +27,7 @@
 
 <body>
 
-	<header style="text-align: center; font-size: 3vw;">
-		<h1> <!-- Importante colocar esse "h1" pro SEO -->
-			<b>Biblioteca da Aprovação</b>
-			<!-- <b>BIBLIOTECA DA APROVAÇÃO</b> -->
-		</h1>
-	</header>
+	
 
 	<div class="container">
 		<h2>Biblioteca da Aprovação</h2>
@@ -79,7 +74,7 @@
 		<div id="livroFUVEST" style="background: ; display: block;">
 			<br><br>
 			<div class="row" style="background: pink; display: " >
-				<div class="col-md-4" style="background: ;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -97,7 +92,7 @@
 						</button>
 					</a> 
 				</div>
-				<div class="col-md-4" style="background: ;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -115,7 +110,7 @@
 						</button>
 					</a> 
 				</div>
-				<div class="col-md-4" style="background: ;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h5><b>Nome do Livro</b></h5></span>
