--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
 
 <body>
 
-	<header style="text-align: center; font-size: 3vw;">
-		<h1> <!-- Importante colocar esse "h1" pro SEO -->
+	<div style="background: gold;">
+		<h1 style="text-align: center;"> <!-- Importante colocar esse "h1" pro SEO -->
 			<b>Biblioteca da Aprovação</b>
-			<!-- <b>BIBLIOTECA DA APROVAÇÃO</b> -->
 		</h1>
-	</header>
+	</div>
 
 	<div class="container">
 		<h2>Biblioteca da Aprovação</h2>
