--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 
 <body>
 
+	<header style="text-align: center; font-size: 3vw;">
+		<h1> <!-- Importante colocar esse "h1" pro SEO -->
+			<b>Biblioteca da Aprovação</b>
+			<!-- <b>BIBLIOTECA DA APROVAÇÃO</b> -->
+		</h1>
+	</header>
+
 	<div style="background: gold;">
 		<h1 style="text-align: center;"> <!-- Importante colocar esse "h1" pro SEO -->
 			<b>Biblioteca da Aprovação</b>
@@ -60,7 +67,7 @@
 		</div>
 		<br><br>
 
-		<div class="row" style="background: ;">
+		<!-- <div class="row" style="background: ;">
 			<div class="col-6" style="background: ; ">
 				<button id="botaoLivro" class="btn btn-outline-dark" onclick="goFUVEST(this)" style="width: 75%;display: block; margin-right: auto; margin-left: auto;">
 					Livros FUVEST 2022
@@ -72,7 +79,7 @@
 				</button>
 			</div>
 		</div>
-		<br><br>
+		<br><br> -->
 		
 
 		<div id="livroFUVEST" style="background: ; display: block;">
