--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<div id="livroFUVEST" style="background: ; display: block;">
 			<br><br>
 			<div class="row" style="background: pink; display: " >
-				<div class="col-md-4" style="background: ;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -103,7 +103,7 @@
 						</button>
 					</a> 
 				</div>
-				<div class="col-md-4" style="background: ;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -121,7 +121,7 @@
 						</button>
 					</a> 
 				</div>
-				<div class="col-md-4" style="background: ;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h5><b>Nome do Livro</b></h5></span>
