--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div id="livroFUVEST" style="background: ; display: block;">
 			<br><br>
 			<div class="row" style="background: pink; display: " >
-				<div class="col-sm-4" style="background: ;">
+				<div class="col-sm-4" style="background: red;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -87,7 +87,7 @@
 						Ver livro na Amazon
 						</button>
 					</a> 
-					<br><br>
+					<br><br><br><br>
 				</div>
 				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
@@ -127,7 +127,6 @@
 				<p><b>LIVROS DA FUVEST</b></p>	
 			</div>
 
-			<br><br>
 			<div class="row" style="background: ; display: " >
 				<div class="col-md-4" style="background: ;">
 					<img src="https://images-na.ssl-images-amazon.com/images/I/41ZiCXcTgZL._SX346_BO1,204,203,200_.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
@@ -180,7 +179,6 @@
 				<p><b>LIVROS DA FUVEST</b></p>
 			</div>
 
-			<br><br>
 			<div class="row" style="background: ; display: " >
 				<div class="col-md-4" style="background: ;">
 					<img src="https://images-na.ssl-images-amazon.com/images/I/51mvzkOmW+L._SX322_BO1,204,203,200_.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
@@ -235,7 +233,6 @@
 				<p><b>LIVROS DA FUVEST</b></p>
 			</div>
 			
-			<br><br>
 			<div class="row" style="background: ; display: " >
 				<a href="Livros pra FUVEST 2022" target="_blank"><button>Livros pra FUVEST 2022</button></a>
 			</div>
