--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
 						Ver livro na Amazon
 						</button>
 					</a> 
-					<br><br><br><br>
+					eita<br>eita<br>
 				</div>
+
 				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
@@ -106,8 +107,9 @@
 						Ver livro na Amazon
 						</button>
 					</a> 
-					<br><br>
+
 				</div>
+
 				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
@@ -122,7 +124,7 @@
 						Ver livro na Amazon
 						</button>
 					</a>
-					<br><br> 
+
 				</div>
 				<p><b>LIVROS DA FUVEST</b></p>	
 			</div>
