--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						Ver livro na Amazon
 						</button>
 					</a> 
-					eita<br>eita<br>
+					eita<br>
 				</div>
 
 				<div class="col-sm-4" style="background: ;">
