--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 						Ver livro na Amazon
 						</button>
 					</a> 
-					eita<br>
+					<br>
 				</div>
 
-				<div class="col-sm-4" style="background: ;">
+				<div class="col-sm-4" style="background: green;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -107,10 +107,10 @@
 						Ver livro na Amazon
 						</button>
 					</a> 
-
+					<br>
 				</div>
 
-				<div class="col-sm-4" style="background: ;">
+				<div class="col-sm-4" style="background: brown;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h5><b>Nome do Livro</b></h5></span>
@@ -124,7 +124,7 @@
 						Ver livro na Amazon
 						</button>
 					</a>
-
+					<br>
 				</div>
 				<p><b>LIVROS DA FUVEST</b></p>	
 			</div>
