--- a/index.html
+++ b/index.html
@@ -126,9 +126,67 @@
 					</a>
 					<br>
 				</div>
-				<p><b>LIVROS DA FUVEST</b></p>	
 			</div>
 
+			<div class="row" style="background: pink; display: " >
+				<div class="col-sm-4" style="background: red;">
+					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
+					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
+						<span><h3><b>Nome do Livro</b></h3></span>
+						<span><h5>Nome do autor</h5></span>
+						<span><b>Livro Físico:</b></span>
+						<span style="text-decoration: line-through;">De: R$ 57.90</span>
+						<span style="color: #b12704;"><b>Por: R$ 36.90</b></span>
+						<br><span><b>Kindle:</b></span>
+						<span style="color: #b12704;"><b>Por: R$ 40.91</b></span>
+					</div>
+					<a target="_blank" href="#" >
+						<button class="btn btn-dark buttonAmazon">
+						<i class="fab fa-amazon" class="logoAmazon"></i>
+						Ver livro na Amazon
+						</button>
+					</a> 
+					<br>
+				</div>
+
+				<div class="col-sm-4" style="background: green;">
+					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
+					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
+						<span><h3><b>Nome do Livro</b></h3></span>
+						<span><h5>Nome do autor</h5></span>
+						<span><b>Livro Físico:</b></span>
+						<span style="text-decoration: line-through;">De: R$ 57.90</span>
+						<span style="color: #b12704;"><b>Por: R$ 36.90</b></span>
+						<br><span><b>Kindle:</b></span>
+						<span style="color: #b12704;"><b>Por: R$ 40.91</b></span>
+					</div>
+					<a target="_blank" href="#" >
+						<button class="btn btn-dark buttonAmazon">
+						<i class="fab fa-amazon" class="logoAmazon"></i>
+						Ver livro na Amazon
+						</button>
+					</a> 
+					<br>
+				</div>
+
+				<div class="col-sm-4" style="background: brown;">
+					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
+					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
+						<span><h5><b>Nome do Livro</b></h5></span>
+						<span><h6>Nome do autor</h6></span>
+						<span style="text-decoration: line-through;">De: R$ 57.90</span>
+						<span style="color: #b12704;"><b>Por: R$ 36.90</b></span>
+					</div>
+					<a href="#" >
+						<button class="btn btn-dark buttonAmazon">
+						<i class="fab fa-amazon" class="logoAmazon"></i>
+						Ver livro na Amazon
+						</button>
+					</a>
+					<br>
+				</div>
+			</div>
+			
 			<div class="row" style="background: ; display: " >
 				<div class="col-md-4" style="background: ;">
 					<img src="https://images-na.ssl-images-amazon.com/images/I/41ZiCXcTgZL._SX346_BO1,204,203,200_.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
