--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div id="livroFUVEST" style="background: ; display: block;">
 			<br><br>
 			<div class="row" style="background: pink; display: " >
-				<div class="col-sm-4" style="background: red;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -90,7 +90,7 @@
 					<br>
 				</div>
 
-				<div class="col-sm-4" style="background: green;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -110,7 +110,7 @@
 					<br>
 				</div>
 
-				<div class="col-sm-4" style="background: brown;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h5><b>Nome do Livro</b></h5></span>
@@ -129,7 +129,7 @@
 			</div>
 
 			<div class="row" style="background: pink; display: " >
-				<div class="col-sm-4" style="background: red;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -149,7 +149,7 @@
 					<br>
 				</div>
 
-				<div class="col-sm-4" style="background: green;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -169,7 +169,7 @@
 					<br>
 				</div>
 
-				<div class="col-sm-4" style="background: brown;">
+				<div class="col-sm-4" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h5><b>Nome do Livro</b></h5></span>
@@ -186,7 +186,7 @@
 					<br>
 				</div>
 			</div>
-			
+
 			<div class="row" style="background: ; display: " >
 				<div class="col-md-4" style="background: ;">
 					<img src="https://images-na.ssl-images-amazon.com/images/I/41ZiCXcTgZL._SX346_BO1,204,203,200_.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
