--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
 						<br><span><b>Kindle:</b></span>
 						<span style="color: #b12704;"><b>Por: R$ 40.91</b></span>
 					</div>
-					<a target="_blank" href="#" >
-						<button class="btn btn-dark buttonAmazon">
+					<button class="btn btn-dark buttonAmazon" style="color: white;">
+						<a target="_blank" href="#" >
 						<i class="fab fa-amazon" class="logoAmazon"></i>
 						Ver livro na Amazon
-						</button>
-					</a> 
+						</a> 
+					</button>
 					<br>
 				</div>
 
@@ -101,12 +101,12 @@
 						<br><span><b>Kindle:</b></span>
 						<span style="color: #b12704;"><b>Por: R$ 40.91</b></span>
 					</div>
-					<a target="_blank" href="#" >
-						<button class="btn btn-dark buttonAmazon">
+					<button class="btn btn-dark buttonAmazon" style="color: white;">
+						<a target="_blank" href="#" >
 						<i class="fab fa-amazon" class="logoAmazon"></i>
 						Ver livro na Amazon
-						</button>
-					</a> 
+						</a> 
+					</button>
 					<br>
 				</div>
 
@@ -118,13 +118,14 @@
 						<span style="text-decoration: line-through;">De: R$ 57.90</span>
 						<span style="color: #b12704;"><b>Por: R$ 36.90</b></span>
 					</div>
-					<a href="#" >
-						<button class="btn btn-dark buttonAmazon">
+					<button class="btn btn-dark buttonAmazon" style="color: white;">
+						<a target="_blank" href="#" >
 						<i class="fab fa-amazon" class="logoAmazon"></i>
 						Ver livro na Amazon
-						</button>
-					</a>
+						</a> 
+					</button>
 					<br>
+
 				</div>
 			</div>
 
@@ -140,12 +141,12 @@
 						<br><span><b>Kindle:</b></span>
 						<span style="color: #b12704;"><b>Por: R$ 40.91</b></span>
 					</div>
-					<a target="_blank" href="#" >
-						<button class="btn btn-dark buttonAmazon">
+					<button class="btn btn-dark buttonAmazon" style="color: white;">
+						<a target="_blank" href="#" >
 						<i class="fab fa-amazon" class="logoAmazon"></i>
 						Ver livro na Amazon
-						</button>
-					</a> 
+						</a> 
+					</button>
 					<br>
 				</div>
 
@@ -160,12 +161,12 @@
 						<br><span><b>Kindle:</b></span>
 						<span style="color: #b12704;"><b>Por: R$ 40.91</b></span>
 					</div>
-					<a target="_blank" href="#" >
-						<button class="btn btn-dark buttonAmazon">
+					<button class="btn btn-dark buttonAmazon" style="color: white;">
+						<a target="_blank" href="#" >
 						<i class="fab fa-amazon" class="logoAmazon"></i>
 						Ver livro na Amazon
-						</button>
-					</a> 
+						</a> 
+					</button>
 					<br>
 				</div>
 
@@ -177,13 +178,14 @@
 						<span style="text-decoration: line-through;">De: R$ 57.90</span>
 						<span style="color: #b12704;"><b>Por: R$ 36.90</b></span>
 					</div>
-					<a href="#" >
-						<button class="btn btn-dark buttonAmazon">
+					<button class="btn btn-dark buttonAmazon" style="color: white;">
+						<a target="_blank" href="#" >
 						<i class="fab fa-amazon" class="logoAmazon"></i>
 						Ver livro na Amazon
-						</button>
-					</a>
+						</a> 
+					</button>
 					<br>
+
 				</div>
 			</div>
 
