--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div id="livroFUVEST" style="background: ; display: block;">
 			<br><br>
 			<div class="row" style="background: pink; display: " >
-				<div class="col-sm-4" style="background: ;">
+				<div class="col-md-4 col-sm-6" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -90,7 +90,7 @@
 					<br>
 				</div>
 
-				<div class="col-sm-4" style="background: ;">
+				<div class="col-md-4 col-sm-6" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -110,7 +110,7 @@
 					<br>
 				</div>
 
-				<div class="col-sm-4" style="background: ;">
+				<div class="col-md-4 col-sm-6" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h5><b>Nome do Livro</b></h5></span>
