--- a/index.html
+++ b/index.html
@@ -34,17 +34,11 @@
 		</h1>
 	</header>
 
-	<div style="background: gold;">
-		<h1 style="text-align: center;"> <!-- Importante colocar esse "h1" pro SEO -->
-			<b>Biblioteca da Aprovação</b>
-		</h1>
-	</div>
-
 	<div class="container">
 		<h2>Biblioteca da Aprovação</h2>
 		<p>Clique em um dos botões para aparecer os livros correspondentes</p>
 
-		<div class="row">
+		<!-- <div class="row">
 			<div class="col-3" style="background: red;">g</div>
 			<div class="col-6" style="background: gold;">
 				<button id="botaoLivro" class="btn btn-outline-dark" onclick="goFUVEST(this)">
@@ -56,7 +50,7 @@
 			</div>
 			<div class="col-3" style="background: blue;">g</div>
 		</div>
-
+ 		-->
 		<div class="row" style="background: pink;">
 			<button id="botaoLivro" class="btn btn-outline-dark" onclick="goFUVEST(this)" style="display: block; margin-right: auto; margin-left: auto;">
 				Livros FUVEST 2022
