--- a/index.html
+++ b/index.html
@@ -64,7 +64,31 @@
 		<div id="livroFUVEST" style="background: ; display: block;">
 			<br><br>
 			<div class="row" style="background: pink; display: " >
-				<div class="col-md-4 col-sm-6" style="background: ;">
+				<div class="row" style="background: pink; display: " >
+				<div class="col-md-4 col-sm-6" style="background: red;">
+					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
+					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
+						<h3 style="background: pink;"><b>Nome do Livro</b></h3>
+						<h5 style="background: green;">Nome do autor</h5>
+						<!-- <span style="background: blueviolet;"><b>Livro Físico:</b></span>
+						<br> -->
+						<h6>Livro Físico:
+						<br><span style="text-decoration: line-through;">De: R$ 57.90</span>
+						<span style="color: #b12704;"><b>Por: R$ 36.90</b></span></h6>
+						<!-- <br><span style="background: burlywood;"><b>Kindle:</b></span> -->
+						<h6>Kindle:
+						<br><span style="color: #b12704;"><b>Por: R$ 40.91</b></span></h6>
+					</div>
+					<button class="btn btn-dark buttonAmazon" style="color: white;">
+						<a target="_blank" href="#" >
+						<i class="fab fa-amazon" class="logoAmazon"></i>
+						Ver livro na Amazon
+						</a> 
+					</button>
+					<br>
+				</div>
+
+				<div class="col-md-4 col-sm-6" style="background: green;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -83,6 +107,25 @@
 					</button>
 					<br>
 				</div>
+
+				<div class="col-md-4 col-sm-6" style="background: red;">
+					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
+					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
+						<span><h5><b>Nome do Livro</b></h5></span>
+						<span><h6>Nome do autor</h6></span>
+						<span style="text-decoration: line-through;">De: R$ 57.90</span>
+						<span style="color: #b12704;"><b>Por: R$ 36.90</b></span>
+					</div>
+					<button class="btn btn-dark buttonAmazon" style="color: white;">
+						<a target="_blank" href="#" >
+						<i class="fab fa-amazon" class="logoAmazon"></i>
+						Ver livro na Amazon
+						</a> 
+					</button>
+					<br>
+
+				</div>
+			</div>
 
 				<div class="col-md-4 col-sm-6" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
