--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 		<div id="livroFUVEST" style="background: ; display: block;">
 			<br><br>
 			<div class="row" style="background: pink; display: " >
-				<div class="row" style="background: pink; display: " >
 				<div class="col-md-4 col-sm-6" style="background: red;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
@@ -127,47 +126,8 @@
 				</div>
 			</div>
 
-				<div class="col-md-4 col-sm-6" style="background: ;">
-					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
-					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
-						<span><h3><b>Nome do Livro</b></h3></span>
-						<span><h5>Nome do autor</h5></span>
-						<span><b>Livro Físico:</b></span>
-						<span style="text-decoration: line-through;">De: R$ 57.90</span>
-						<span style="color: #b12704;"><b>Por: R$ 36.90</b></span>
-						<br><span><b>Kindle:</b></span>
-						<span style="color: #b12704;"><b>Por: R$ 40.91</b></span>
-					</div>
-					<button class="btn btn-dark buttonAmazon" style="color: white;">
-						<a target="_blank" href="#" >
-						<i class="fab fa-amazon" class="logoAmazon"></i>
-						Ver livro na Amazon
-						</a> 
-					</button>
-					<br>
-				</div>
-
-				<div class="col-md-4 col-sm-6" style="background: ;">
-					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
-					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
-						<span><h5><b>Nome do Livro</b></h5></span>
-						<span><h6>Nome do autor</h6></span>
-						<span style="text-decoration: line-through;">De: R$ 57.90</span>
-						<span style="color: #b12704;"><b>Por: R$ 36.90</b></span>
-					</div>
-					<button class="btn btn-dark buttonAmazon" style="color: white;">
-						<a target="_blank" href="#" >
-						<i class="fab fa-amazon" class="logoAmazon"></i>
-						Ver livro na Amazon
-						</a> 
-					</button>
-					<br>
-
-				</div>
-			</div>
-
 			<div class="row" style="background: pink; display: " >
-				<div class="col-sm-4" style="background: ;">
+				<div class="col-sm-4" style="background: green;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -187,7 +147,7 @@
 					<br>
 				</div>
 
-				<div class="col-sm-4" style="background: ;">
+				<div class="col-sm-4" style="background: red;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h3><b>Nome do Livro</b></h3></span>
@@ -207,7 +167,7 @@
 					<br>
 				</div>
 
-				<div class="col-sm-4" style="background: ;">
+				<div class="col-sm-4" style="background: green;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto;">
 					<div style="background: gold; text-align: center; display: block; margin-right: auto; margin-left:auto;">
 						<span><h5><b>Nome do Livro</b></h5></span>
