--- a/index.html
+++ b/index.html
@@ -116,18 +116,12 @@
 						</a> 
 					</button>
 					<br>
-					<button class="btn buttonAmazonMaluco">
-						<a target="_blank" href="#"  class="linkButtonAmazonMaluco">
-							<i class="fab fa-amazon" class="logoAmazon"></i>
-							Ver livro na Amazon 2
-						</a> 
-					</button>
-					<br><br>
+
 					<a target="_blank" href="#"  class="" style="color: ;">
-						<button class="btn btn-outline-dark" style="margin-right: auto; margin-left: auto; display: block; " href="https://getbootstrap.com.br/docs/4.1/components/buttons/">
+						<button class="btn btn-outline-dark" style="margin-right: auto; margin-left: auto; display: block; box-shadow: 2px 2px 2px grey;">
 						
 							<i class="fab fa-amazon" class="logoAmazon"></i>
-							Ver livro na Amazon 3
+							Ver livro na Amazon
 						
 						</button>
 					</a>
