--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</h1>
 	</header>
 
-	<div class="container">
+	<div class="container" style="background: white;">
 		<h2>Biblioteca da Aprovação</h2>
 		<p>Clique em um dos botões para aparecer os livros correspondentes</p>
 
