--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="row" style="background: ; display: " >
 				<div class="col-md-4 col-sm-6" style="background: ;">
 					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto; box-shadow: 7px 7px 7px grey;">
-					<div style="background: ; text-align: center; display: block; margin-right: auto; margin-left:auto;">
+					<div style="background: ; text-align: center; display: block; margin-right: auto; margin-left:auto; ">
 						<br>
 						<h3><b>Nome do Livro</b></h3>
 						<h5>Nome do autor</h5>
@@ -82,13 +82,13 @@
 							<span style="color: #b12704;"><b>Por: R$ 40.91</b></span>
 						</h6>
 					</div>
-					<button class="btn btn-dark buttonAmazon" style="color: white; ">
+					<!-- <button class="btn btn-dark buttonAmazon" style="color: white; ">
 						<a target="" href="#" >
 						<i class="fab fa-amazon" class="logoAmazon"></i>
 						Ver livro na Amazon
 						</a> 
-					</button>
-					<br>
+					</button> 
+					<br>-->
 
 					<a target="" href="#"  class="" style="color: ;">
 						<button class="btn btn-outline-dark" style="margin-right: auto; margin-left: auto; display: block; box-shadow: 2px 2px 2px grey;">
@@ -128,7 +128,7 @@
 					</button>
 					<br>
 
-					<a target="" href="#"  class="" style="color: ;">
+					<!-- <a target="" href="#"  class="" style="color: ;">
 						<button class="btn btn-outline-dark" style="margin-right: auto; margin-left: auto; display: block; box-shadow: 2px 2px 2px grey;">
 						
 							<i class="fab fa-amazon" class="logoAmazon"></i>
@@ -137,7 +137,7 @@
 						</button>
 					</a>
 					
-					<br><br>
+					<br><br> -->
 				</div>
 
 				<div class="col-md-4 col-sm-6" style="background: ;">
