--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 		<div id="livroFUVEST" style="background: ; display: block;">
 			<br><br>
 			<div class="row" style="background: ; display: " >
-				<div class="col-md-4 col-sm-6" style="background: ;">
-					<img src="img/livro_Mindset.jpg" style="width: 75%; display: block; margin-right: auto; margin-left:auto; box-shadow: 7px 7px 7px grey;">
+				<div class="col-md-4 col-sm-6" style="background: pink;">
+					<img src="img/livro_Mindset.jpg" style="width: 60%; display: block; margin-right: auto; margin-left:auto; box-shadow: 7px 7px 7px grey;">
 					<div style="background: ; text-align: center; display: block; margin-right: auto; margin-left:auto; ">
 						<br>
 						<h3><b>Nome do Livro</b></h3>
