--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<br><br>
 			<div class="row" style="background: ; display: " >
 				<div class="col-md-4 col-sm-6" style="background: pink;">
-					<img src="img/livro_Mindset.jpg" style="width: 50%; display: block; margin-right: auto; margin-left:auto; box-shadow: 7px 7px 7px grey;">
+					<img src="img/livro_Mindset.jpg" style="width: 50%; display: block; margin-right: auto; margin-left:auto; box-shadow: 7px 7px 7px grey;" alt="Nome do Livro e Muito BlaBlaBla" title="Nome do Livro e Muito BlaBlaBla">
 					<div style="background: ; text-align: center; display: block; margin-right: auto; margin-left:auto; ">
 						<br>
 						<h3><b>Nome do Livro</b></h3>
@@ -82,16 +82,16 @@
 							<span style="color: #b12704;"><b>Por: R$ 40.91</b></span>
 						</h6>
 					</div>
-					<!-- <button class="btn btn-dark buttonAmazon" style="color: white; ">
+					 <button class="btn btn-dark buttonAmazon" style="color: white; ">
 						<a target="" href="#" >
 						<i class="fab fa-amazon" class="logoAmazon"></i>
 						Ver livro na Amazon
 						</a> 
 					</button> 
-					<br>-->
+					<br>
 
 					<a target="" href="#"  class="" style="color: ;">
-						<button class="btn btn-outline-dark" style="margin-right: auto; margin-left: auto; display: block; box-shadow: 2px 2px 2px grey;">
+						<button class="btn btn-outline-dark" style="margin-right: auto; margin-left: auto; display: block; box-shadow: 2px 2px 2px grey; width: %;">
 						
 							<i class="fab fa-amazon" class="logoAmazon"></i>
 							Ver livro na Amazon
@@ -100,6 +100,14 @@
 					</a>
 					
 					<br><br>
+
+					<a _ngcontent-rea-c9="" class=" btn btn-small btn-outline_secondary" href="https://avecbrasil.com.br/para-negocios-2/" title="Descubra mais">Descubra mais</a>
+					<br><br>
+					<a href="#" class="btn btn-outline-dark" style="margin-right: auto; margin-left: auto; display: block; box-shadow: 2px 2px 2px grey; width: %;">
+						<i class="fab fa-amazon" class="logoAmazon"></i>
+							Ver livro na Amazon
+					</a>
+
 				</div>
 
 				<div class="col-md-4 col-sm-6" style="background: ;">
