--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 						</button>
 					</a>
 					
-					<br><br>
-					
-					<a href="#" class="btn btn-outline-dark" style="margin-right: auto; margin-left: auto; display: block; box-shadow: 2px 2px 2px grey; width: %;">
+					<a href="#" class="btn btn-outline-dark" style="margin-right: auto; margin-left: auto; display: block; box-shadow: 2px 2px 2px grey; width: 55%;">
 						<i class="fab fa-amazon" class="logoAmazon"></i>
 							Ver livro na Amazon
 					</a>
+
+					<br><br>
 
 				</div>
 
