--- a/index.html
+++ b/index.html
@@ -75,6 +75,25 @@
 		<h2>Biblioteca da Aprovação</h2>
 		<p>Clique em um dos botões para aparecer os livros correspondentes</p>
 
+		<div class="row">
+			<div class="col-md-4">
+				<a target="_blank" href="http://viajar.hu/28oru">
+					<img src="https://ghucdn.s3.amazonaws.com/static/afiliados-clubehu/painel/promotion/pacote-chapada-diamantina-2022-e-2023-ce28490426b44710b1db1b493b7462b0.jpg" style="width:100%; border-style: solid; border-radius: 10px; color: black; box-shadow: 5px 5px 5px grey;">	
+				</a>	
+			</div>
+			<div class="col-md-4">
+				<a target="_blank" href="http://viajar.hu/28orv">
+					<img src="https://ghucdn.s3.amazonaws.com/static/afiliados-clubehu/painel/promotion/pacote-jalapao-2022-e-2023-9ecdb9627bbb5d88dd38622d99db7d5c.jpg" style="width:100%; border-style: solid; border-radius: 10px; color: black; box-shadow: 5px 5px 5px grey;">	
+				</a>	
+			</div>
+			<div class="col-md-4">
+				<a target="_blank" href="http://viajar.hu/28orv">
+					<img src="https://ghucdn.s3.amazonaws.com/static/afiliados-clubehu/painel/promotion/pacote-chapada-dos-veadeiros-2022-e-2023-df96ceca87cda7ba757303f0a76a202f.jpg" style="width:100%; border-style: solid; border-radius: 10px; color: black; box-shadow: 5px 5px 5px grey;">	
+				</a>	
+			</div>
+		</div>
+		
+		<br><br>
 		<div class="row" style="background: ;">
 			<button class="btn btn-outline-dark botaoLivro" onclick="goFUVEST(this)">
 				Livros FUVEST 2022
